--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
+services:
+  - mongodb
 node_js:
-  - '0.10.26'
+  - '0.10'
 before_script:
   - npm install -g grunt-cli
 notifications:
